--- a/.gitignore
+++ b/.gitignore
@@ -208,4 +208,4 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos
 
-dataset/kolumbus/*
+dataset/kolumbus/*.csv
