--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,19 @@ dataset/porto/output/*.txt
 dataset/kolumbus/*.csv
 dataset/kolumbus/output/*.txt
 !dataset/kolumbus/output/META-*.txt
+
+
+#HASHES
+hashed_data/disk/porto/*.txt
+!hashed_data/disk/porto/META-*.txt
+
+hashed_data/grid/porto/*.txt
+!hashed_data/grid/porto/META-*.txt
+
+
+hashed_data/disk/rome/*.txt
+!hashed_data/disk/rome/META-*.txt
+
+hashed_data/grid/rome/*.txt
+!hashed_data/grid/rome/META-*.txt
+
