created heatmaps for rome and porto + performed preprocessing

--- a/.gitignore
+++ b/.gitignore
@@ -222,6 +222,10 @@ dataset/kolumbus/output/*.txt
 !dataset/kolumbus/output/META-*.txt
 
 
+heatmaps/output/porto/*.html
+heatmaps/output/rome/*.html
+
+
 #HASHES
 dataset/hashed_data/disk/porto/*.txt
 dataset/hashed_data/disk/porto/META-*.txt
