--- a/.gitignore
+++ b/.gitignore
@@ -235,6 +235,5 @@ dataset/hashed_data/disk/rome/META-*.txt
 dataset/hashed_data/grid/rome/*.txt
 dataset/hashed_data/grid/rome/META-*.txt
 
-
-!visualization/output/porto/*
-!visualization/output/rome/*
+visualization/output/porto/*
+visualization/output/rome/*
